# Qt6-webOS

./: .gitignore  CLAUDE.md  PROMPT-qt515-build.md  README.md  build-qpa-glibc.sh  build-qt6-glibc-custom.sh  build-qt6-hybrid.sh  build-qt6-packages.sh  build-qt6-softfloat.sh  toolchain-webos-armv7-glibc-custom.cmake  toolchain-webos-armv7-softfloat-gcc13.cmake  toolchain-webos-armv7-softfloat.cmake  toolchain-webos-hybrid.cmake
QT6-packages/: com.nizovn.qt6qpaplugins_6.6.3-0_armv7.ipk  com.nizovn.qt6test_1.0.0_armv7.ipk
QT6-packages/com.nizovn.glibc6_2.35-0_armv7/control/: control
QT6-packages/com.nizovn.qt6_6.6.3-0_armv7/control/: control
QT6-packages/com.nizovn.qt6_6.6.3-0_armv7/data/usr/palm/applications/com.nizovn.qt6/lib/: libQt6Coap.so.6  libQt6Concurrent.so.6  libQt6LabsAnimation.so.6.6.3  libQt6LabsFolderListModel.so.6  libQt6LabsQmlModels.so.6  libQt6LabsWavefrontMesh.so.6  libQt6Network.so.6.6.3  libQt6NetworkAuth.so.6.6.3  libQt6OpenGL.so.6.6.3  libQt6PrintSupport.so.6  libQt6QmlCompiler.so.6.6.3  libQt6QmlCore.so.6.6.3  libQt6QmlModels.so.6  libQt6QuickControls2.so.6.6.3  libQt6QuickControls2BasicStyleImpl.so.6.6.3  libQt6QuickControls2ImagineStyleImpl.so.6  libQt6QuickControls2Universal.so.6.6.3  (+13 more)
QT6-packages/com.nizovn.qt6qpaplugins_6.6.3-0_armv7/control/: control
QT6-packages/com.nizovn.qt6test_1.0.0_armv7/control/: control
QT6-packages/com.nizovn.qt6test_1.0.0_armv7/data/usr/palm/applications/com.nizovn.qt6test/: appinfo.json  qt6-hello-world  run-qt6test.sh
qt6-hello-world/: CMakeLists.txt
qt6-hello-world/src/: main.cpp  main.qml
(+1 files in other folders)
